--- a/index.html
+++ b/index.html
@@ -199,22 +199,46 @@
         </a>
 
         <!-- Link Sosial Media -->
-        <div class="flex justify-center gap-6 items-center">
-            <!-- Instagram -->
-            <a href="https://www.instagram.com/etherea.im/" target="_blank" rel="noopener noreferrer" class="text-slate-400 hover:text-pink-600 transition transform hover:scale-110" title="Instagram @etherea.im">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <div class="flex justify-center gap-6 items-center flex-wrap">
+            <!-- Instagram (Visual) -->
+            <a href="https://www.instagram.com/etherea.im/" target="_blank" rel="noopener noreferrer" class="text-slate-400 hover:text-pink-600 transition transform hover:scale-110 group relative" title="Instagram @etherea.im">
+                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
                     <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
                     <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
                 </svg>
+                <span class="absolute -bottom-8 left-1/2 -translate-x-1/2 text-[10px] bg-slate-800 text-white px-2 py-1 rounded opacity-0 group-hover:opacity-100 transition whitespace-nowrap">Visual</span>
             </a>
             
-            <!-- TikTok -->
-            <a href="https://www.tiktok.com/@notbemineeee" target="_blank" rel="noopener noreferrer" class="text-slate-400 hover:text-black transition transform hover:scale-110" title="TikTok @notbemineeee">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <!-- TikTok (Video) -->
+            <a href="https://www.tiktok.com/@notbemineeee" target="_blank" rel="noopener noreferrer" class="text-slate-400 hover:text-black transition transform hover:scale-110 group relative" title="TikTok @notbemineeee">
+                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M9 12a4 4 0 1 0 4 4V4a5 5 0 0 0 5 5"></path>
                 </svg>
+                <span class="absolute -bottom-8 left-1/2 -translate-x-1/2 text-[10px] bg-slate-800 text-white px-2 py-1 rounded opacity-0 group-hover:opacity-100 transition whitespace-nowrap">Video</span>
             </a>
+
+            <!-- Divider -->
+            <div class="w-px h-6 bg-slate-300 mx-2"></div>
+
+            <!-- Medium (Writing) -->
+            <a href="https://medium.com/@aimannumaan0602" target="_blank" rel="noopener noreferrer" class="text-slate-400 hover:text-black transition transform hover:scale-110 group relative" title="Medium - Tulisan Opini">
+                <!-- Icon Medium -->
+                <svg viewBox="0 0 24 24" fill="currentColor" width="28" height="28">
+                    <path d="M13.54 12a6.8 6.8 0 01-6.77 6.82A6.8 6.8 0 010 12a6.8 6.8 0 016.77-6.82A6.8 6.8 0 0113.54 12zM20.96 12c0 3.54-1.51 6.42-3.38 6.42-1.87 0-3.39-2.88-3.39-6.42s1.52-6.42 3.39-6.42 3.38 2.88 3.38 6.42M24 12c0 3.17-.53 5.75-1.19 5.75-.66 0-1.19-2.58-1.19-5.75s.53-5.75 1.19-5.75C23.47 6.25 24 8.82 24 12z"/>
+                </svg>
+                <span class="absolute -bottom-8 left-1/2 -translate-x-1/2 text-[10px] bg-slate-800 text-white px-2 py-1 rounded opacity-0 group-hover:opacity-100 transition whitespace-nowrap">Writing</span>
+            </a>
+
+            <!-- Quora (Knowledge) -->
+            <a href="https://id.quora.com/profile/Aim-23" target="_blank" rel="noopener noreferrer" class="text-slate-400 hover:text-red-700 transition transform hover:scale-110 group relative" title="Quora - Q&A">
+                <!-- Icon Quora -->
+                <svg viewBox="0 0 24 24" fill="currentColor" width="28" height="28">
+                    <path d="M11.96 2.05c-5.46 0-9.91 4.22-9.91 9.42 0 2.21.82 4.25 2.19 5.86l-.54 3.65c-.09.6.61 1.01 1.12.67l3.29-2.22c1.17.48 2.45.74 3.79.74 5.46 0 9.91-4.22 9.91-9.42S17.42 2.05 11.96 2.05z"/>
+                </svg>
+                <span class="absolute -bottom-8 left-1/2 -translate-x-1/2 text-[10px] bg-slate-800 text-white px-2 py-1 rounded opacity-0 group-hover:opacity-100 transition whitespace-nowrap">Q&A</span>
+            </a>
+
         </div>
 
         <div class="mt-12 text-sm text-slate-400">
